src/objects/IT_Equipment__c.object
<CustomObject>
    <fields>
        <fullName>Age_of_equipment__c</fullName>
        <formula>FLOOR((TODAY()- Date_of_purchase__c )/365.2425)</formula>
        <label>Age of equipment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
                <value>
                    <fullName>Damaged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_purchase__c</fullName>
        <label>Date of purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Blackburn</fullName>
                </value>
                <value>
                    <fullName>Commercial Office</fullName>
                </value>
                <value>
                    <fullName>Contact Centre</fullName>
                </value>
                <value>
                    <fullName>Edgware Road</fullName>
                </value>
                <value>
                    <fullName>Head office</fullName>
                </value>
                <value>
                    <fullName>HPP Sales</fullName>
                </value>
                <value>
                    <fullName>Ilford</fullName>
                </value>
                <value>
                    <fullName>Leicester</fullName>
                </value>
                <value>
                    <fullName>Manchester</fullName>
                </value>
                <value>
                    <fullName>Premier Branch</fullName>
                </value>
                <value>
                    <fullName>Premier Office</fullName>
                </value>
                <value>
                    <fullName>Small Heath</fullName>
                </value>
                <value>
                    <fullName>Tooting</fullName>
                </value>
                <value>
                    <fullName>Whitechapel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type_of_equipment__c</fullName>
        <label>Type of equipment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cashier printer</fullName>
                </value>
                <value>
                    <fullName>Cheque Scanner</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Inkjet Printer</fullName>
                </value>
                <value>
                    <fullName>Laptop</fullName>
                </value>
                <value>
                    <fullName>Laser Printer</fullName>
                </value>
                <value>
                    <fullName>Multi function device</fullName>
                </value>
                <value>
                    <fullName>Scanner</fullName>
                </value>
                <value>
                    <fullName>Tablet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Working__c</fullName>
        <label>Working?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>IT Equipment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ITE{0000}</displayFormat>
        <label>IT Equipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Equipment</pluralLabel>
    <recordTypes>
        <fullName>Desktop_Laptop</fullName>
        <active>true</active>
        <description>To be used to log all existing and new PCs.</description>
        <label>Desktop/Laptop</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Equipment</fullName>
        <active>true</active>
        <description>To be used to log all other IT equipment</description>
        <label>Other Equipment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>